# libcontactangle

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  TODO.md  contactangle.cpp  contactangle.hpp  geometry.cpp  geometry.hpp  main.cpp  uncrustify.cfg  utils.hpp
pyext/: CMakeLists.txt  libcontactangle.i
src/: contactangle.cpp  contactangle.hpp  geometry.cpp  geometry.hpp  main.cpp  utils.hpp
src/gui/: CMakeLists.txt
tests/: CMakeLists.txt  geometry_ut.cpp
